--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/components/DetailedHelpControlGroup.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/components/DetailedHelpControlGroup.html
@@ -7,7 +7,7 @@
   ~ http://www.gnu.org/licenses/gpl.html
   ~
   ~ Contributors:
-  ~    aartimon
+  ~    mpostelnicu
   -->
 
 <html xmlns:wicket="http://wicket.apache.org">
@@ -17,20 +17,12 @@
     <body>
         <wicket:border>
             <label wicket:id="label" class="control-label">Text input</label>
-
             <div class="controls">
                 <wicket:body/>
-
   				<p wicket:id="error" class="help-block"></p>
-                
-                
-              
-                
                 <span wicket:id="help" class="help-block" style="display:inline;">Supporting help text</span>
                 <i wicket:id="detailedHelpIcon" style="cursor:pointer;"></i>
-                
                 <span wicket:id="detailedHelp" class="help-block" style="font-size: 80%;">Extra help text</span>
-                
             </div>
         </wicket:border>
     </body>
