--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/application.css
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/application.css
@@ -28,3 +28,13 @@ select, input[type="text"], input[type="password"], input[type="datetime"], inpu
 .help-block {
     font-style: italic;
 }
+
+.eubanner {
+    background: linear-gradient(45deg, #003399 0%, #000000 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2) inset, 0 -3px 7px rgba(0, 0, 0, 0.2) inset;
+    color: #FFFFFF;
+    padding: 40px 0;
+    position: relative;
+    text-align: center;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4), 0 0 30px rgba(0, 0, 0, 0.075);
+}
