--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_memo_debtrelief_year.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_memo_debtrelief_year.jrxml
@@ -9,13 +9,14 @@
 	<parameter name="SUBDIR_PATH" class="java.lang.String"/>
 	<queryString language="mdx">
 		<![CDATA[SELECT
-NON EMPTY {[Type of Aid].[Debt relief en]} ON ROWS,
+NON EMPTY {[Type of Finance Root].[TYPE_OF_FINANCE##100]} ON ROWS,
 NON EMPTY {[Measures].[Commitments Amount]} ON COLUMNS
 FROM [Financial]
-WHERE {[Reporting Year].[$P{FIRST_YEAR}]}*{[Type of Flow].[ODA Grant en], [Type of Flow].[ODA Grant-like en]}]]>
+WHERE {[Reporting Year].[$P{FIRST_YEAR}]}*{[Type of Aid].[F]}
+]]>
 	</queryString>
 	<field name="Debt Relief Grants" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[Debt relief en])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Finance Root].[TYPE_OF_FINANCE##100])]]></fieldDescription>
 	</field>
 	<background>
 		<band splitType="Stretch"/>
